# cohorting

./: .gitignore  .pre-commit-config.yaml  .releaserc.json  LICENSE  README.md  Taskfile.yaml  pyproject.toml
.github/workflows/: codspeed.yaml  lint.yaml  publish.yaml  release.yaml  test.yaml
docs/: rust-extension-design.md
docs/superpowers/plans/: 2026-07-08-rust-extension.md
rust-core/: Cargo.toml
rust-core/src/: cohort.rs  hash.rs  lib.rs  utils.rs
scripts/profiling/: README.md  benchmark.py  hotspots.py
src/cohorting/: __about__.py  __init__.py  _cohort.py  _config.py  _core.pyi  _hash.py  _models.py  _validate.py  experiment.py
tests/: test_benchmarks.py  test_cohort.py  test_example.py  test_experiment.py  test_hash.py  test_models.py  test_public_api.py  test_validate.py
