[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cohorting"
version = "0.1.0"
description = "Deterministic experiment cohort assignment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
authors = [
  {name = "Justin Flannery", email = "justin.flannery@juftin.com"}
]
license = "MIT"
classifiers = [
  "Development Status :: 4 - Beta",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy"
]

[project.optional-dependencies]
xxhash = ["xxhash>=3.0"]
numpy = ["numpy>=1.24"]
pandas = ["pandas>=2.0"]
polars = ["polars>=0.20"]

[project.urls]
Issues = "https://github.com/juftin/cohorting/issues"
Source = "https://github.com/juftin/cohorting"

[dependency-groups]
dev = [
  "pytest",
  "pytest-cov",
  "mypy>=1,<2",
  "ruff~=0.12.10",
  "line-profiler>=4.0",
  "memray>=1.0",
  "numpy>=1.24",
  "pandas>=2.0",
  "pandas-stubs>=2.3.3.260113",
  "polars>=0.20",
  "pyinstrument>=5.0",
  "snakeviz>=2.1",
  "xxhash>=3.0"
]

[tool.pytest.ini_options]
addopts = [
  "-v",
  "--cov=src/cohorting",
  "--cov-report=term-missing",
  "--cov-report=xml:coverage.xml",
  "--junitxml=pytest.xml"
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:"
]

[tool.coverage.run]
branch = true
omit = [
  "src/cohorting/__about__.py"
]
parallel = true

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
follow_imports = "silent"
ignore_missing_imports = true
no_implicit_reexport = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
ignore = [
  # Ignore checks for possible passwords
  "S105",
  "S106",
  "S107",
  # Ignore complexity
  "C901",
  "PLR0911",
  "PLR0912",
  "PLR0913",
  "PLR0915",
  # Boolean-typed positional argument in function definition
  "FBT001",
  # Boolean default positional argument in function definition
  "FBT002",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Exception must not use a string literal, assign to variable first
  "EM101"
]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
known-first-party = ["cohorting"]

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
